--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.14.2",
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
@@ -22,7 +23,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "recharts": "^2.10.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
